--- a/style.css
+++ b/style.css
@@ -1,42 +1,36 @@
-/* Slider */
+.intro {
+  Width: 100%;
+  margin:0 auto;
+
+}
 
 .carousel-inner, .carousel-item {
   height: 50vh;
 }
-
 .carousel-item img {
   height: 100%;
   object-fit: cover;
 }
-
-.card image {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-}
-
-.icon {
-    font-size: 20px;
-    padding: 0 5px;
+.carousel-item {
+  position: relative;
 
 }
 
-.section-col {
-    background-color: #eff2f5;
-
+.carousel-caption {
+  position: absolute;
+  top: 190px;
 }
 
-.footer {
-    background-color: #eff2f5;
-
+.carousel-caption h2 {
+  font-family: 'Architects Daughter', cursive;
 }
 
-.navbar-brand, .carousel-caption {
-    font-family: 'Andada Pro', serif;
-    color: gold;
+.section-columns, .container {
+   text-align: center;
 }
 
-.card-body {
-    font-family: 'Andada Pro', serif;
-    font-size: 20px;
+.section-columns a, .container a {
+  font-family: 'Architects Daughter', cursive;
+  color: #ACA4A4;
+  font-size: 20px;
 }
